--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
-@import "@liveblocks/react-comments/styles.css";
+@import "@liveblocks/react-ui/styles.css";
+
 
 @tailwind base;
 @tailwind components;
@@ -9,6 +10,10 @@
   font-family:
     work sans,
     sans-serif;
+}
+
+body{
+  overflow: hidden;
 }
 
 @layer utilities {
